# tmp

./: bob.cpp
bob/: CMakeLists.txt  bob.h
exec/: CMakeLists.txt  main.cpp
foo/: CMakeLists.txt  foo.cpp
prefix/cmake/: bobConfig.cmake  fooConfig.cmake
